# cpp-tree-sitter

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/: aliases.h  cursor.h  language.h  parser.h  tree.h
include/cpp-tree-sitter/: children.h  node.h  query.h
source/: node.cpp  query.cpp
test/: CMakeLists.txt
test/source/: query_test.cpp
